--- a/webform_validation.routing.yml
+++ b/webform_validation.routing.yml
@@ -1,7 +1,7 @@
 entity.webform.validation_form:
   path: '/admin/structure/webform/manage/{webform}/validation'
   defaults:
-    _form: '\Drupal\webform_validation\Form\WebformValidationsForm'
+    _entity_form: 'webform.validations'
     _title_callback: '\Drupal\webform\Controller\WebformEntityController::title'
   requirements:
     _permission: 'access administration pages'
